Algumas correcções ortográficas e de estilo.

--- a/1º Semestre/Processo Civil I/Aula1_13_09_2018.md
+++ b/1º Semestre/Processo Civil I/Aula1_13_09_2018.md
@@ -1,4 +1,4 @@
-# Aula 1
+# Aula 1 - 13 de Setembro de 2018
 _Prof Rui Pinto_
 
 **Como resolver quando há conflito de interesses entre particulares?**
@@ -25,35 +25,36 @@ Iniciamos a matéria com:
 
 ---
 
-## O que é o prcesso civil a sua justificação
+## O que é o processo civil a sua justificação
 
 O processo civil tem na sua base um conflito de interesses (pretensões entrepostas sobre o mesmo bem jurídico).
 
 Então, _como se resolve o conflito_?
 
 Pode haver:
-    * Composição voluntária do conflito -> **contrato de transacção**.
-    * Composição unilateral do conflito [pela via privada] (auto-tutela de direitos):
-        * Regra é a de que não é admitida: _artigo 1º do CPC_;
-        * 701º do CC;
-        * Estado de necessidade;
-        * Acção directa;
-        * Legítima defesa;
-        * Acórdão da Relação de Lisboa de Fátima Galante de 4 de Março de 2010, em que a magistrada refere que uma cláusula num contrato que permitia ao senhoria a posse indirecta do estabelecimento comercial em caso de mora superior a 60 dias por parte do inquilino, é uma forma encapotada de auto-tutela.
+* Composição voluntária do conflito -> **contrato de transacção**.
+* Composição unilateral do conflito [pela via privada] (auto-tutela de direitos):
+    * Regra é a de que não é admitida: _artigo 1º do CPC_;
+    * 701º do CC;
+    * Estado de necessidade;
+    * Acção directa;
+    * Legítima defesa;
+    * Acórdão da Relação de Lisboa de Fátima Galante de 4 de Março de 2010, em que a magistrada refere que uma cláusula num contrato que permitia ao senhoria a posse indirecta do estabelecimento comercial em caso de mora superior a 60 dias por parte do inquilino, é uma forma encapotada de auto-tutela.
     
 Sendo a composição unilateral do conflito, em regra, _proibida_, é o Estado que **tem o monopólio da dirimição de conflitos** -> função **jurisdicional**.
+
 No entanto, o Estado só tutela direitos **a pedido** (exercício do **direito de acção**).
 
 * Processos de jurisidição voluntária: não há conflito de direitos, mas sim conflito de interesses (_e.g._ declaração de inabilitação). Correspondem, assim sendo, **não à função jurisdicional dos tribunais**, mas a uma **função administrativa** dos mesmos (não existem direitos subjectivos, _e.g._ ninguém tem direito à declaração de inabilitação de um afim, mas sim interesse naquela).
 
 * Processos de jurisdição contenciosa: aqueles em que existe um conflito de direitos, e em que os tribunais exercem, _de factu_, a **função jurisdicional**.
 
-À função de jurisdicional, corresponde o **direito à tutela jurisdicional** (equiparado a um direito fundamental).
-    * Artigo 20º, n.º1 da CRP;
-    * Artigo 6º da CEDH;
-    * Artigo 10º da DUDH.
+À função jurisdicional, corresponde o **direito à tutela jurisdicional** (equiparado a um direito fundamental), consagrado, por exemplo, nos seguintes diplomas:
+* Artigo 20º, n.º1 da CRP;
+* Artigo 6º da CEDH;
+* Artigo 10º da DUDH.
 
-Trata-se de um direito universal ou absoluto, na medida em que _abrange todos os direitos e todos os interesses_. Como diz o Professor Gomes Canotilho, o **direito à tutela jurisdicional** é uma protecção jurídico-individual _sem lacunas_.
+Trata-se de um **direito universal** ou **absoluto**, na medida em que _abrange todos os direitos e todos os interesses_. Como diz o Professor Gomes Canotilho, o **direito à tutela jurisdicional** é uma protecção jurídico-individual _sem lacunas_.
 
 Este direito desdobra-se em:
 
