Alterações relativas às excepções à proibição de auto-tutela de direitos

--- a/1º Semestre/Processo Civil I/Aula1_13_09_2018.md
+++ b/1º Semestre/Processo Civil I/Aula1_13_09_2018.md
@@ -34,12 +34,12 @@ Então, _como se resolve o conflito_?
 Pode haver:
 * Composição voluntária do conflito -> **contrato de transacção**.
 * Composição unilateral do conflito [pela via privada] (auto-tutela de direitos):
-    * Regra é a de que não é admitida: _artigo 1º do CPC_;
-    * 701º do CC;
-    * Estado de necessidade;
-    * Acção directa;
-    * Legítima defesa;
-    * Acórdão da Relação de Lisboa de Fátima Galante de 4 de Março de 2010, em que a magistrada refere que uma cláusula num contrato que permitia ao senhoria a posse indirecta do estabelecimento comercial em caso de mora superior a 60 dias por parte do inquilino, é uma forma encapotada de auto-tutela.
+    * Regra é a de que **não é admitida**: _artigo 1º do CPC_;
+    * _Excepção_: artigo 701º do CC;
+    * _Excepção_: Estado de necessidade;
+    * _Excepção_: Acção directa;
+    * _Excepção_: Legítima defesa;
+    * _Excepção_: Acórdão da Relação de Lisboa de Fátima Galante de 4 de Março de 2010, em que a magistrada refere que uma cláusula num contrato que permitia ao senhoria a posse indirecta do estabelecimento comercial em caso de mora superior a 60 dias por parte do inquilino, é uma forma encapotada de auto-tutela.
     
 Sendo a composição unilateral do conflito, em regra, _proibida_, é o Estado que **tem o monopólio da dirimição de conflitos** -> função **jurisdicional**.
 
