Ponto final após nome do Professor.

--- a/1º Semestre/Processo Civil I/Aula1_13_09_2018.md
+++ b/1º Semestre/Processo Civil I/Aula1_13_09_2018.md
@@ -1,5 +1,5 @@
 # Aula 1 - 13 de Setembro de 2018
-_Prof Rui Pinto_
+_Professor Rui Pinto_.
 
 **Como resolver quando há conflito de interesses entre particulares?**
 
