--- a/1º Semestre/Direito Comercial/Aula1_13_09_2018.md
+++ b/1º Semestre/Direito Comercial/Aula1_13_09_2018.md
@@ -11,7 +11,7 @@ _Prof. Doutor José Ferreira Gomes_
 
 1. **Direito Privado**
 
-No conjunto, enquanto sistema, as regras reconduzem.se ao princípio da liberdade e da igualdade (corolários do direito privado). 
+No conjunto, enquanto sistema, as regras reconduzem-se ao princípio da liberdade e da igualdade (corolários do direito privado). 
 É um sub-sistema do sistema de direito privado (não são todas as regras que são de direito privado - _e.g._ registo comercial é direito público).
 
 Assim, **é privado na globalidade**, não regra a regra, princípio a princípio.
