Correcção estilística relativa aos parênteses.

--- a/1º Semestre/Direito Comercial/Aula1_13_09_2018.md
+++ b/1º Semestre/Direito Comercial/Aula1_13_09_2018.md
@@ -60,7 +60,7 @@ A primeira insuficiência deste é que é anterior ao Código Civil (que lhe ser
 
 1. **Comercialidade**: regula pessoas ou actividades?
 
-2. **Autonomia**: científica, técnica, pedagógica...
+2. **Autonomia**: científica, técnica, pedagógica, entre outras vertentes.
 
 3. **Especialidade**: especial em relação ao direito privado comum (globalmente, e não ponto a ponto).
 
