Correcções estilísticas (negritos e itálicos).

--- a/1º Semestre/Processo Civil I/Aula2_18_09_2018.md
+++ b/1º Semestre/Processo Civil I/Aula2_18_09_2018.md
@@ -30,27 +30,27 @@ O artigo 92º, relativo às _questões prejudiciais_, diz que o juiz cível pode
 O Processo Civil tem uma função instrumental: garantir os direitos e as situações jurídicas privadas em conflito; assim, as normas secundárias do Processo Civil são fundamentais para **fazer funcional o direito material**.
 
 São sub-funções:
-1. Instrumentalidade do direito objectivo:
-Normas jurídicas prevalecem quando há conflito, por causa do Processo Civil (instrumentalidade abstracta)-
+1. **Instrumentalidade do direito objectivo**:
+Normas jurídicas prevalecem quando há conflito, por causa do Processo Civil (instrumentalidade abstracta).
 
-2. Instrumentalidade das situações jurídicas subjectivas:
+2. **Instrumentalidade das situações jurídicas subjectivas:**
 Resolver conflitos concretos (garantia dos direitos subjectivos, que decorrem do direito objectivo); a resolução destes litígios nos tribunais acaba por ajudar a construir o direito objectivo.
 
 **É IMPORTANTE LER OS 10 PRIMEIROS ARTIGOS NOS CPC's COMENTADOS**
 
 O artigo 2º/2, em conjugação com o artigo 10º, diz-nos que **há várias categorias de acções**:
 
-- Acções declarativas;
-- Acções executivas;
-- Providências cautelares.
+- Acções _declarativas_;
+- Acções _executivas_;
+- Providências _cautelares_.
 
 As várias acções resumem-se a 3 (três) funções principais:
 
-1. Preventiva: prevenir a violação de um direito (o artigo 2º/2 refere-o directamente); são residuais, na medida em que é difícil provar uma violação futura (_e.g._ artigo 878º) -> **acção inibitória**.
+1. **Preventiva:** prevenir a violação de um direito (o artigo 2º/2 refere-o directamente); são residuais, na medida em que é difícil provar uma violação futura (_e.g._ artigo 878º) -> **acção inibitória**.
 
-2. Remédio/repressiva: acções que se justificam quando já houve violação do direito, sendo utilizadas para o cumprimento forçado do direito ou para o cumprimento sucedâneo do mesmo.
+2. **Remédio/repressiva:** acções que se justificam quando já houve violação do direito, sendo utilizadas para o cumprimento forçado do direito ou para o cumprimento sucedâneo do mesmo.
 
-3. Constitutiva: o artigo 10º fala delas (_e.g._ extinguir contrato de arrendamento através de acção de despejo ou declarar nulidade de um contrato; ou seja, **acções com carácter inovatório**).
+3. **Constitutiva:** o artigo 10º fala delas (_e.g._ extinguir contrato de arrendamento através de acção de despejo ou declarar nulidade de um contrato; ou seja, **acções com carácter inovatório**).
 
 ---
 
@@ -62,7 +62,7 @@ No entanto, o artigo 202º/4 da CRP diz que a lei pode criar instrumentos não j
 
 **Quais são os meios?**
 
-1. Arbitragem: árbitros não são do Estado; o procedimento destes tribunais é o do CPC; há arbitragem **voluntária** (Lei 63/2011, pressupõe acordo entre as partes) e arbitragem **necessária** (imposta por lei).
+1. **Arbitragem:** árbitros não são do Estado; o procedimento destes tribunais é o do CPC; há arbitragem **voluntária** (Lei 63/2011, pressupõe acordo entre as partes) e arbitragem **necessária** (imposta por lei).
 
 Na arbitragem voluntária, as partes podem definir as regras do procedimento. Assim, qual é o ponto comum? É que ainda estamos no âmbito do processo civil, **na medida em que: I. há um tribunal independente; II. há um litígio e; III. na sequência do exercício do contraditório, que vai produzir uma decisão que vincula as partes.**
 
@@ -70,7 +70,7 @@ Na arbitragem voluntária, as partes podem definir as regras do procedimento. As
 _Pro-tip_: o autor vai a jogo para ganhar; o réu vai a jogo para não perder.
 
 
-2. Mediação: de que são exemplo os julgados de paz (Lei 78/2001). Tem orgânica própria, são tribunais do Estado. O que os distingue é o facto de servir não o contencioso de A contra B, mas sim uma mediação (ou seja, atringir um acordo entre as partes - os dois saem a ganhar e a perder).
+2. **Mediação:** de que são exemplo os julgados de paz (Lei 78/2001). Tem orgânica própria, são tribunais do Estado. O que os distingue é o facto de servir não o contencioso de A contra B, mas sim uma mediação (ou seja, atringir um acordo entre as partes - os dois saem a ganhar e a perder).
 
 ---
 
@@ -80,10 +80,10 @@ _Pro-tip_: o autor vai a jogo para ganhar; o réu vai a jogo para não perder.
 
 **Características do Direito Processual Civil**
 
-1. Público: função jurisdicional;
-2. Instrumental: garantir os direitos e situações jurídicas subjectivas;
-3. Adjectivo: nunca pode aplicar-se a normas que não existam.
-4. Auto-suficiência: baseia-se em pretensôes (alegados direitos) e é actividade longa; funciona mesmo que o autor não tenha razão (é direito formal, o **direito de acção**); é também _formalmente_ auto-suficiente, porque corre mesmo que haja vícios formais (_e.g._ se réu disser que tribunal é incompetente, é o próprio tribunal tem que avaliar se é ou não).
+1. **Público:** porque tem função jurisdicional;
+2. **Instrumental:** porque serve para garantir os direitos e situações jurídicas subjectivas;
+3. **Adjectivo:** porque nunca pode aplicar-se a normas que não existam.
+4. **Auto-suficiência:** baseia-se em pretensôes (alegados direitos) e é actividade longa; funciona mesmo que o autor não tenha razão (é direito formal, o **direito de acção**); é também _formalmente_ auto-suficiente, porque corre mesmo que haja vícios formais (_e.g._ se réu disser que tribunal é incompetente, é o próprio tribunal tem que avaliar se é ou não).
 
 ---
 
